# fairy

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  detemplatize.d.ts  example-config.json  native.d.ts  package-lock.json  package.json  tsconfig.json
addons/: detemplatize.rs  index.rs
lib/: bot.js  command.js  commands.js  history.js  overrides.js  repl.js  seasonalemotes.js  server.js  summary.js  template.js  util.js
src/: bot.ts  cache.ts  commands.ts  config.ts  download.ts  history.ts  repl.ts  server.ts  summary.ts  template.ts  util.ts
